# target-mirakl

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
target_mirakl/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py  test_orders.py
